--- a/src/pages/users/profile.module.css
+++ b/src/pages/users/profile.module.css
@@ -23,5 +23,7 @@
     text-align: center;
     justify-content: center;
     border: 2px solid #fff;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
