--- a/src/index.css
+++ b/src/index.css
@@ -694,7 +694,7 @@ h6 {
   align-items: center;
   font-size: 15px;
   font-weight: 600;
-  color: #4154f1;
+  color: #4154f1 !important;
   transition: 0.3;
   background: #f6f9ff;
   padding: 10px 15px;
@@ -704,11 +704,11 @@ h6 {
 .sidebar-nav .nav-link i {
   font-size: 16px;
   margin-right: 10px;
-  color: #4154f1;
+  color: #4154f1 !important;
 }
 
 .sidebar-nav .nav-link.collapsed {
-  color: #012970;
+  color: #012970 !important;
   background: #fff;
 }
 
